fixed tree container alignment [marked for review: 495]

--- a/www/assets/styles/base.less
+++ b/www/assets/styles/base.less
@@ -37,16 +37,14 @@
 
 /* Tree container ------------------------------------------------------- */
 #tree-container{
-    width: 1040px; 
+    width: 1090px;
+    height: 615px;
     margin: 0 auto;
     background: url('../images/map-bg.png') no-repeat;
 }
 
-#map {
-    padding: 15px 21px 24px;
-}
-
 #tree {
+    padding: 15px 21px 24px;
     overflow:hidden;
     #sourcemap-tree-view {
         position:relative;        
